# WinAPI_ArchBTW

./: .gitignore  CMakeLists.txt
MainWindow/: CMakeLists.txt
MainWindow/include/: resource.h
MainWindow/src/: main.cpp
